# article-collector

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  article-collector.toml  release-please-config.json  release-plz.toml  setup.sh
.cargo/: config.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: commit-msg
.github/: .gitconfig  .gitconfig.local.example  setup-git.sh
.github/workflows/: ci.yml  pr-checklist.yml  release-please.yml  release.yml
docs/: AGENTS.md
docs/architectures/: enums.md  files.md  usage.md
docs/ci-cd/: README.md
docs/linear/: README.md
docs/pr/: README.md
docs/sites/: README.md  arxiv.md  aws-security.md  aws-whatsnew.md  bluesky.md  cisa-kev.md  cncf.md  devto.md  doi.md  github-advisory.md  github-search.md  google-cloud-blog.md  hackernews.md  infoq.md  kubernetes.md  martinfowler.md  nvd.md  openreview.md  qiita.md  thoughtworks-radar.md  twitter.md  youtube.md  zenn.md
docs/tests/: README.md
scripts/: article-news-report.ps1  fetch-article.sh  save-and-pr.sh  translate.sh  verify-pr.sh  verify-release-pr-scope.sh  verify-rules.sh  verify-workflow-security.sh  wait-ci.sh  youtube-transcript.py
src/: cleanup.rs  config.rs  fetch.rs  logging.rs  main.rs  paths.rs  recommend.rs  recommend_artifacts.rs  recommend_history.rs  save.rs  sites.rs  target_repos.rs  translate.rs  youtube.rs
src/discovery/: mod.rs  planner.rs  types.rs
src/fetch/: mod.rs  (+1 more)
tests/: architecture.rs  article-news-report.Tests.ps1  cli.rs  fetch-article.bats  save-and-pr.bats  translate.bats
(+52 files in other folders)
