[package]
name = "article-collector"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
scraper = "0.22"
chrono = "0.4"
anyhow = "1"
html-escape = "0.2"
dirs = "6"
