[package]
name = "article-collector"
version = "0.6.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/rurusasu/article-collector"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "json",
  "rustls-tls",
  "system-proxy",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
toml = "0.8"
regex = "1"
scraper = "0.22"
quick-xml = "0.38"
chrono = "0.4"
anyhow = "1"
html-escape = "0.2"
dirs = "6"
